# HiLive2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  LICENSE.md  README  README.md  debug.cpp  main.cpp
documentation/doxygen/: config.doxyfile
lib/: alignmentSettings.h  alnblock.cpp  alnblock.h  alnout.cpp  alnout.h  alnread.cpp  alnread.h  alnstream.cpp  alnstream.h  argument_parser.cpp  argument_parser.h  bamout.cpp  bamout.h  config.h.in  definitions.h  global_variables.h  headers.h  illumina_parsers.cpp  illumina_parsers.h  kindex.cpp  kindex.h  parallel.cpp  parallel.h  tools.cpp  tools.h  tools_static.cpp  tools_static.h
scripts/: fastq2bcl.py  simulate_run.py
tools/: build_index.cpp  hilive.cpp  hilive_out.cpp
tutorial/: README.md  config.ini
